// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sakura > [桜都字幕組] BLEACH 死神 千年血戰篇 -相剋譚- / Bleach：Sennen Kessen Hen - Soukoku Tan [10][1080p][繁體內嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "subtitles": "內嵌",
  "tags": [],
  "title": "BLEACH 死神 千年血戰篇 -相剋譚-",
  "titles": [
    "Bleach：Sennen Kessen Hen - Soukoku Tan",
  ],
}
`;

exports[`sakura > [桜都字幕組] 在地下城尋求邂逅是否搞錯了什麼 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V  [10][1080P][繁體內嵌][v2] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080P",
    },
  },
  "language": "繁體",
  "season": {
    "number": 5,
  },
  "subtitles": "內嵌",
  "tags": [],
  "title": "在地下城尋求邂逅是否搞錯了什麼",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
  "version": 2,
}
`;

exports[`sakura > [桜都字幕組] 在地下城尋求邂逅是否搞錯了什麼 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [10][1080P][繁體內嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080P",
    },
  },
  "language": "繁體",
  "season": {
    "number": 5,
  },
  "subtitles": "內嵌",
  "tags": [],
  "title": "在地下城尋求邂逅是否搞錯了什麼",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
}
`;

exports[`sakura > [桜都字幕組] 大正偽婚～替身新娘與軍服的猛愛 / Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai [08][1080p][繁體內嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "subtitles": "內嵌",
  "tags": [],
  "title": "大正偽婚～替身新娘與軍服的猛愛",
  "titles": [
    "Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai",
  ],
}
`;

exports[`sakura > [桜都字幕組] 妻子变成小学生。 / Tsuma, Shougakusei ni Naru  [11][1080p][简体內嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "內嵌",
  "tags": [],
  "title": "妻子变成小学生。",
  "titles": [
    "Tsuma, Shougakusei ni Naru",
  ],
}
`;

exports[`sakura > [桜都字幕組] 妻子变成小学生。 / Tsuma, Shougakusei ni Naru  [11][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "妻子变成小学生。",
  "titles": [
    "Tsuma, Shougakusei ni Naru",
  ],
}
`;

exports[`sakura > [桜都字幕組] 妻子變成小學生。 / Tsuma, Shougakusei ni Naru  [11][1080p][繁体内嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "tags": [
    "繁体内嵌",
  ],
  "title": "妻子變成小學生。",
  "titles": [
    "Tsuma, Shougakusei ni Naru",
  ],
}
`;

exports[`sakura > [桜都字幕組] 少女如草花綻放 / Nanare Hananare [01-12][1080p][繁體內嵌] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 12,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "subtitles": "內嵌",
  "tags": [],
  "title": "少女如草花綻放",
  "titles": [
    "Nanare Hananare",
  ],
}
`;

exports[`sakura > [桜都字幕組] 常軌脫離Creative / Hamidashi Creative [11][1080p][繁體內嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "subtitles": "內嵌",
  "tags": [],
  "title": "常軌脫離Creative",
  "titles": [
    "Hamidashi Creative",
  ],
}
`;

exports[`sakura > [桜都字幕組] 膽大黨 / Dan Da Dan [11][1080p][繁體內嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕組",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "subtitles": "內嵌",
  "tags": [],
  "title": "膽大黨",
  "titles": [
    "Dan Da Dan",
  ],
}
`;

exports[`sakura > [桜都字幕组] BLEACH 死神 千年血战篇 -相克谭- / Bleach：Sennen Kessen Hen - Soukoku Tan [10][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "内嵌",
  "tags": [],
  "title": "BLEACH 死神 千年血战篇 -相克谭-",
  "titles": [
    "Bleach：Sennen Kessen Hen - Soukoku Tan",
  ],
}
`;

exports[`sakura > [桜都字幕组] BLEACH 死神 千年血战篇 -相克谭- / Bleach：Sennen Kessen Hen - Soukoku Tan [10][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "BLEACH 死神 千年血战篇 -相克谭-",
  "titles": [
    "Bleach：Sennen Kessen Hen - Soukoku Tan",
  ],
}
`;

exports[`sakura > [桜都字幕组] 亦叶亦花 / Nanare Hananare [01-12][1080p][简繁内封] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 12,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "亦叶亦花",
  "titles": [
    "Nanare Hananare",
  ],
}
`;

exports[`sakura > [桜都字幕组] 亦叶亦花 / Nanare Hananare [01-12END][1080p][简体内嵌] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 12,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "内嵌",
  "tags": [],
  "title": "亦叶亦花",
  "titles": [
    "Nanare Hananare",
  ],
}
`;

exports[`sakura > [桜都字幕组] 在地下城寻求邂逅是否搞错了什么 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [09][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "season": {
    "number": 5,
  },
  "subtitles": "内嵌",
  "tags": [],
  "title": "在地下城寻求邂逅是否搞错了什么",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
}
`;

exports[`sakura > [桜都字幕组] 在地下城寻求邂逅是否搞错了什么 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [10][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "season": {
    "number": 5,
  },
  "subtitles": "内嵌",
  "tags": [],
  "title": "在地下城寻求邂逅是否搞错了什么",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
}
`;

exports[`sakura > [桜都字幕组] 在地下城寻求邂逅是否搞错了什么 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [10][1080p][简体内嵌][v2] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "season": {
    "number": 5,
  },
  "subtitles": "内嵌",
  "tags": [],
  "title": "在地下城寻求邂逅是否搞错了什么",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
  "version": 2,
}
`;

exports[`sakura > [桜都字幕组] 在地下城寻求邂逅是否搞错了什么 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [10][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "season": {
    "number": 5,
  },
  "subtitles": "内封",
  "tags": [],
  "title": "在地下城寻求邂逅是否搞错了什么",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
}
`;

exports[`sakura > [桜都字幕组] 在地下城寻求邂逅是否搞错了什么 第五季 / Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V [10][1080p][简繁内封][v2] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "season": {
    "number": 5,
  },
  "subtitles": "内封",
  "tags": [],
  "title": "在地下城寻求邂逅是否搞错了什么",
  "titles": [
    "Dungeon ni Deai o Motomeru no wa Machigatte Iru Darouka： Familia Myth V",
  ],
  "version": 2,
}
`;

exports[`sakura > [桜都字幕组] 大正伪婚～替身新娘与军服的猛爱 / Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai [08][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "内嵌",
  "tags": [],
  "title": "大正伪婚～替身新娘与军服的猛爱",
  "titles": [
    "Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai",
  ],
}
`;

exports[`sakura > [桜都字幕组] 大正伪婚～替身新娘与军服的猛爱 / Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai [08][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "大正伪婚～替身新娘与军服的猛爱",
  "titles": [
    "Taishou Itsuwari Bridal： Migawari Hanayome to Gunpuku no Mou Ai",
  ],
}
`;

exports[`sakura > [桜都字幕组] 常轨脱离Creative / Hamidashi Creative [11][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "内嵌",
  "tags": [],
  "title": "常轨脱离Creative",
  "titles": [
    "Hamidashi Creative",
  ],
}
`;

exports[`sakura > [桜都字幕组] 常轨脱离Creative / Hamidashi Creative [11][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "常轨脱离Creative",
  "titles": [
    "Hamidashi Creative",
  ],
}
`;

exports[`sakura > [桜都字幕组] 超自然武装当哒当 / Dan Da Dan [11][1080p][简体内嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "subtitles": "内嵌",
  "tags": [],
  "title": "超自然武装当哒当",
  "titles": [
    "Dan Da Dan",
  ],
}
`;

exports[`sakura > [桜都字幕组] 超自然武装当哒当 / Dan Da Dan [11][1080p][简繁内封] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "桜都字幕组",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简繁",
  "subtitles": "内封",
  "tags": [],
  "title": "超自然武装当哒当",
  "titles": [
    "Dan Da Dan",
  ],
}
`;
